--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "realtor website",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack-dev-server --content-base src --inline --hot"
   },
   "author": "Adam Tse",
   "license": "ISC",
