--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Adam Tse",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.14.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "webpack": "^1.13.3"
